--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "files": [
-            "src/Http/Helpers.php"
+            "src/helpers.php"
         ],
         "psr-4": {
             "Debva\\Datatables\\": "src/"
@@ -18,5 +18,12 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Debva\\Datatables\\DatatablesServiceProvider"
+            ]
+        }
+    }
 }
